--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -440,7 +440,8 @@
     left: -70px;
   }
   .grid-container {
-    height: 0;
+    position: relative;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: auto auto auto auto auto auto auto;
     padding: 50px;
