--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -398,134 +398,136 @@
 </body>
 
 <style>
-  python .round-logo {
-    border: 4px solid darkred;
-    border-radius: 50%;
-  }
-  #one {
-    top: 50px;
-    left: 100px;
-  }
-  #two {
-    top: -25px;
-  }
-  #three {
-    top: 50px;
-    left: -100px;
-  }
-  #four {
-    top: 200px;
-    left: 200px;
-  }
-  #five {
-    top: -10px;
-    left: -70px;
-  }
-  #six {
-    left: 70px;
-  }
-  #seven {
-    top: 200px;
-    left: -200px;
-  }
-  #eight {
-    top: -100px;
-    left: 70px;
-  }
-  #nine {
-    top: -10px;
-  }
-  #ten {
-    top: -100px;
-    left: -70px;
-  }
-  .grid-container {
-    position: relative;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: auto auto auto auto auto auto auto;
-    padding: 50px;
-    min-height: 1000px;
-    min-width: 1900px;
-  }
-  .grid-item {
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: -10px;
-    font-size: 30px;
-    text-align: center;
-  }
-  .casator-logo {
-    height: 400px;
-    width: 350px;
-  }
-  .btn.btn-secondary.dropdown-toggle {
-    background: darkred;
-    font-family: serif;
-    border-radius: 50%;
-    height: 170px;
-    width: 250px;
-    word-wrap: break-word;
-    white-space: normal;
-    border: 3px solid black;
-    background: radial-gradient(
-          circle farthest-side at 0% 50%,
-          #b50000 23.5%,
-          rgba(240, 166, 17, 0) 0
-        )
-        21px 30px,
-      radial-gradient(
-          circle farthest-side at 0% 50%,
-          #7d0202 24%,
-          rgba(240, 166, 17, 0) 0
-        )
-        19px 30px,
-      linear-gradient(
-          #b50000 14%,
-          rgba(240, 166, 17, 0) 0,
-          rgba(240, 166, 17, 0) 85%,
-          #b50000 0
-        )
-        0 0,
-      linear-gradient(
-          150deg,
-          #b50000 24%,
-          #7d0202 0,
-          #7d0202 26%,
-          rgba(240, 166, 17, 0) 0,
-          rgba(240, 166, 17, 0) 74%,
-          #7d0202 0,
-          #7d0202 76%,
-          #b50000 0
-        )
-        0 0,
-      linear-gradient(
-          30deg,
-          #b50000 24%,
-          #7d0202 0,
-          #7d0202 26%,
-          rgba(240, 166, 17, 0) 0,
-          rgba(240, 166, 17, 0) 74%,
-          #7d0202 0,
-          #7d0202 76%,
-          #b50000 0
-        )
-        0 0,
-      linear-gradient(90deg, #7d0202 2%, #b50000 0, #b50000 98%, #7d0202 0%) 0 0
-        #b50000;
-    background-size: 40px 60px;
-    opacity: 0.9;
-  }
-  .dropdown-menu.show {
-    background: white;
-    border: 3px solid black;
-  }
-  .dropdown-item {
-    color: black;
-    font-family: serif;
-    font-weight: bold;
-  }
-  ul {
-    list-style-type: square;
+  @media (min-width: 600px) {
+    python .round-logo {
+      border: 4px solid darkred;
+      border-radius: 50%;
+    }
+    #one {
+      top: 50px;
+      left: 100px;
+    }
+    #two {
+      top: -25px;
+    }
+    #three {
+      top: 50px;
+      left: -100px;
+    }
+    #four {
+      top: 200px;
+      left: 200px;
+    }
+    #five {
+      top: -10px;
+      left: -70px;
+    }
+    #six {
+      left: 70px;
+    }
+    #seven {
+      top: 200px;
+      left: -200px;
+    }
+    #eight {
+      top: -100px;
+      left: 70px;
+    }
+    #nine {
+      top: -10px;
+    }
+    #ten {
+      top: -100px;
+      left: -70px;
+    }
+    .grid-container {
+      position: relative;
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: auto auto auto auto auto auto auto;
+      padding: 50px;
+      min-height: 1000px;
+      min-width: 1900px;
+    }
+    .grid-item {
+      background-color: rgba(255, 255, 255, 0.8);
+      padding: -10px;
+      font-size: 30px;
+      text-align: center;
+    }
+    .casator-logo {
+      height: 400px;
+      width: 350px;
+    }
+    .btn.btn-secondary.dropdown-toggle {
+      background: darkred;
+      font-family: serif;
+      border-radius: 50%;
+      height: 170px;
+      width: 250px;
+      word-wrap: break-word;
+      white-space: normal;
+      border: 3px solid black;
+      background: radial-gradient(
+            circle farthest-side at 0% 50%,
+            #b50000 23.5%,
+            rgba(240, 166, 17, 0) 0
+          )
+          21px 30px,
+        radial-gradient(
+            circle farthest-side at 0% 50%,
+            #7d0202 24%,
+            rgba(240, 166, 17, 0) 0
+          )
+          19px 30px,
+        linear-gradient(
+            #b50000 14%,
+            rgba(240, 166, 17, 0) 0,
+            rgba(240, 166, 17, 0) 85%,
+            #b50000 0
+          )
+          0 0,
+        linear-gradient(
+            150deg,
+            #b50000 24%,
+            #7d0202 0,
+            #7d0202 26%,
+            rgba(240, 166, 17, 0) 0,
+            rgba(240, 166, 17, 0) 74%,
+            #7d0202 0,
+            #7d0202 76%,
+            #b50000 0
+          )
+          0 0,
+        linear-gradient(
+            30deg,
+            #b50000 24%,
+            #7d0202 0,
+            #7d0202 26%,
+            rgba(240, 166, 17, 0) 0,
+            rgba(240, 166, 17, 0) 74%,
+            #7d0202 0,
+            #7d0202 76%,
+            #b50000 0
+          )
+          0 0,
+        linear-gradient(90deg, #7d0202 2%, #b50000 0, #b50000 98%, #7d0202 0%) 0
+          0 #b50000;
+      background-size: 40px 60px;
+      opacity: 0.9;
+    }
+    .dropdown-menu.show {
+      background: white;
+      border: 3px solid black;
+    }
+    .dropdown-item {
+      color: black;
+      font-family: serif;
+      font-weight: bold;
+    }
+    ul {
+      list-style-type: square;
+    }
   }
 </style>
 {% endblock %}
