--- a/portalen/templates/portalen/header.html
+++ b/portalen/templates/portalen/header.html
@@ -10,12 +10,12 @@
     }
 
     .center {
-    position: absolute;
+    position: relative;
     font-family: serif;
     left: 43%;
     }
     .btn.btn-primary{
-    position: absolute;
+    position: relative;
     left: 90%;
     width: 150px;
     background: white;
