--- a/portalen/templates/portalen/header.html
+++ b/portalen/templates/portalen/header.html
@@ -14,7 +14,9 @@
     position: absolute;
     font-family: serif;
     left: 43%;
+    margin: 60px auto;
     }
+
     .btn.btn-primary{
     position: absolute;
     left: 90%;
@@ -22,6 +24,7 @@
     background: white;
     color: darkred;
     border: 3px solid black;
+    margin: 60px auto;
     }
 
 
