--- a/portalen/templates/portalen/header.html
+++ b/portalen/templates/portalen/header.html
@@ -11,7 +11,7 @@
     }
 
     .center {
-    position: absolute;
+    position: relative;
     font-family: serif;
     margin: 60px auto;
     text-align: center;
