--- a/portalen/templates/portalen/loginheader.html
+++ b/portalen/templates/portalen/loginheader.html
@@ -7,13 +7,15 @@
     border: 3px solid black;
     height: 100px;
     width: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    }
+    
+    .center {
+    font-family: serif;
     }
 
-    .center {
-    position: absolute;
-    font-family: serif;
-    left: 43%;
-    }
     .btn.btn-primary{
     position: absolute;
     left: 90%;
