--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -14,6 +14,9 @@
     background: darkred;
     border: 3px solid black;
     font-family: serif;
+    display: flex;
+    align-content: center;
+    justify-content: center;
     }
     .text-info {
     color: white!important;
