--- a/portalen/templates/portalen/header.html
+++ b/portalen/templates/portalen/header.html
@@ -7,14 +7,13 @@
     border: 3px solid black;
     height: 100px;
     width: 100%;
-    display: flex;
-    align-content: center;
   }
 
   .center {
     position: relative;
     font-family: serif;
-    margin: 37%;
+    margin: 38%;
+    top: 0%;
   }
 
   .btn.btn-primary {
