--- a/portalen/templates/portalen/loginheader.html
+++ b/portalen/templates/portalen/loginheader.html
@@ -7,29 +7,28 @@
     border: 3px solid black;
     height: 100px;
     width: 100%;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    }
-    
-    .center {
-    font-family: serif;
-    }
+    flex-wrap: unset;
+  }
 
-    .btn.btn-primary{
+  .center {
+    position: relative;
+    font-family: serif;
+    margin: 38%;
+    top: 0%;
+  }
+
+  .btn.btn-primary {
     position: absolute;
     left: 90%;
     width: 150px;
     background: white;
     color: darkred;
     border: 3px solid black;
-    }
-
-
+  }
 </style>
 
 <nav class="navbar navbar-expand-lg">
-    <div class="center">
-        <h1>Casatorportalen</h1>
-    </div>
+  <div class="center">
+    <h1>Casatorportalen</h1>
+  </div>
 </nav>
