--- a/portalen/templates/portalen/loginheader.html
+++ b/portalen/templates/portalen/loginheader.html
@@ -1,31 +1,7 @@
 {% load static %}
-
-<style>
-  .navbar {
-    background: darkred;
-    color: white;
-    border: 3px solid black;
-    height: 100px;
-    width: 100%;
-    flex-wrap: unset;
-  }
-
-  .center {
-    position: relative;
-    font-family: serif;
-    left: 43%;
-    top: 0%;
-  }
-
-  .btn.btn-primary {
-    position: absolute;
-    left: 90%;
-    width: 150px;
-    background: white;
-    color: darkred;
-    border: 3px solid black;
-  }
-</style>
+<head>
+  <link rel="stylesheet" href="loginheader-styles.css">
+</head>
 
 <nav class="navbar navbar-expand-lg">
   <div class="center">
