--- a/portalen/templates/portalen/loginheader.html
+++ b/portalen/templates/portalen/loginheader.html
@@ -1,6 +1,6 @@
 {% load static %}
 <head>
-  <link rel="stylesheet" href="loginheader-styles.css">
+  <link href="loginheader-styles.css">
 </head>
 
 <nav class="navbar navbar-expand-lg">
