--- a/portalen/templates/portalen/loginheader.html
+++ b/portalen/templates/portalen/loginheader.html
@@ -1,6 +1,7 @@
 {% load static %}
 <head>
-  <link href="loginheader-styles.css">
+  <base href="/">
+  <link href="loginheader-styles.css" rel="stylesheet">
 </head>
 
 <nav class="navbar navbar-expand-lg">
