--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -5,8 +5,7 @@
       Logo
     </div>
 
-  <div class="box" id="one" style="
-">One</div>
+  <div class="box" id="one">One</div>
   <div class="box" id="two">Two</div>
   <div class="box" id="three">Three</div>
   <div class="box" id="four">Four</div>
@@ -120,7 +119,7 @@
     left: 44%;
     top: 365px;
     }
-    
+
   .wrapper{
   background: magenta;
   position: relative;
