--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -1,123 +1,118 @@
 {% extends 'portalen/base.html' %} {% load static %} {% block content %}
 <body>
-  <div class="wrapper"
-       <div class="box" id="logo">
-      Logo
-    </div>
-
-  <div class="box" id="one">One</div>
-  <div class="box" id="two">Two</div>
-  <div class="box" id="three">Three</div>
-  <div class="box" id="four">Four</div>
-  <div class="box" id="five">Five</div>
-  <div class="box" id="six">Six</div>
-  <div class="box" id="seven">Seven</div>
-  <div class="box" id="eight">Eight</div>
-   <div class="box" id="nine">Nine</div>
-   <div class="box" id="ten">Ten</div>
+  <div class="wrapper">
+      
+    <div class="box" id="logo">Logo</div>
+    <div class="box" id="one">One</div>
+    <div class="box" id="two">Two</div>
+    <div class="box" id="three">Three</div>
+    <div class="box" id="four">Four</div>
+    <div class="box" id="five">Five</div>
+    <div class="box" id="six">Six</div>
+    <div class="box" id="seven">Seven</div>
+    <div class="box" id="eight">Eight</div>
+    <div class="box" id="nine">Nine</div>
+    <div class="box" id="ten">Ten</div>
+    
   </div>
 </body>
 
 <style>
+  .box {
+    border-radius: 50%;
+    position: absolute;
+    background: green;
+    width: 11%;
+    text-align: center;
+  }
+
    #one{
     margin: 1%;
-    position: relative;
     left: 43%;
     height: 120px;
     line-height: 110px;
-    top: -60px;
+    top: 0%;
     }
     
      #two{
       margin: 1%;
-    position: relative;
-    left: 32%;
+    left: 30%;
     height: 120px;
     line-height: 110px;
-    top: -110px;
+    top: 98px;
     }
     
      #three{
       margin: 1%;
-      position: relative;
-    left: 25%;
+    left: 22%;
     height: 120px;
     line-height: 110px;
-    top: -120px
+    top: 250px;
     }
     
      #four{
       margin: 1%;
-    position: relative;
     height: 120px;
     line-height: 110px;
-    top: -110px;
-    left: 23%;
+    top: 410px;
+    left: 20%;
     }
     
      #five{
       margin: 1%;
-    position: relative;
     height: 120px;
     line-height: 110px;
-    left: 31%;
-    top: -121px;
+    left: 28%;
+    top: 550px;
     }
     
      #six{
       margin: 1%;
-    position: relative;
     height: 120px;
     line-height: 110px;
-    top: -187px;
+    top: 640px;
     left: 43%;
     }
     
      #seven{
       margin: 1%;
-    position: relative;
     height: 120px;
     line-height: 110px;
-    top: -392px;
-    left: 55%;
+    top: 548px;
+    left: 57%;
     }
     
      #eight{
       margin: 1%;
-    position: relative;
     height: 120px;
     line-height: 110px;
-    top: -922px;
-    left: 54%;
+    top: 410px;
+    left: 66%;
     }
     
      #nine{
       margin: 1%;
-    position: relative;
     height: 120px;
     line-height: 110px;
-    top: -932px;
-    left: 63%;
+    top: 250px;
+    left: 66%;
     }
     
      #ten{
       margin: 1%;
-    position: relative;
     height: 120px;
     line-height: 110px;
-    top: -923px;
-    left: 63%;
+    top: 98px;
+    left: 55%;
     }
   
     #logo {
       border: 4px solid darkred;
-    border-radius: 50%;
     background: red;
-    position: relative;
     height: 120px;
     line-height: 100px;
     left: 44%;
-    top: 365px;
+    top: 345px;
     }
 
   .wrapper{
