--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -32,29 +32,29 @@
     height: 120px;
     line-height: 110px;
     top: 0%;
-    }
+}
     
      #two{
       margin: 1%;
     left: 30%;
     height: 120px;
     line-height: 110px;
-    top: 98px;
-    }
+    top: 78px;
+}
     
      #three{
       margin: 1%;
     left: 22%;
     height: 120px;
     line-height: 110px;
-    top: 250px;
+    top: 200px;
     }
     
      #four{
       margin: 1%;
     height: 120px;
     line-height: 110px;
-    top: 410px;
+    top: 340px;
     left: 20%;
     }
     
@@ -63,14 +63,14 @@
     height: 120px;
     line-height: 110px;
     left: 28%;
-    top: 550px;
+    top: 460px
     }
     
      #six{
       margin: 1%;
     height: 120px;
     line-height: 110px;
-    top: 640px;
+    top: 530px;
     left: 43%;
     }
     
@@ -78,7 +78,7 @@
       margin: 1%;
     height: 120px;
     line-height: 110px;
-    top: 548px;
+    top: 460px;
     left: 57%;
     }
     
@@ -86,7 +86,7 @@
       margin: 1%;
     height: 120px;
     line-height: 110px;
-    top: 410px;
+    top: 340px;
     left: 66%;
     }
     
@@ -94,16 +94,16 @@
       margin: 1%;
     height: 120px;
     line-height: 110px;
-    top: 250px;
-    left: 66%;
+    top: 200px;
+    left: 65%;
     }
     
      #ten{
       margin: 1%;
     height: 120px;
     line-height: 110px;
-    top: 98px;
-    left: 55%;
+    top: 79px;
+    left: 56%;
     }
   
     #logo {
@@ -112,15 +112,14 @@
     height: 120px;
     line-height: 100px;
     left: 44%;
-    top: 345px;
+    top: 285px;
     }
 
   .wrapper{
-  background: magenta;
-  position: relative;
-  width: 80%;
-  height: 869px;
-  margin: 0 auto;
+    position: relative;
+    width: 80%;
+    height: 674px;
+    margin: 0 auto;
   }
     .casator-logo {
       height: 400px;
