--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -1,9 +1,21 @@
 {% extends 'portalen/base.html' %} {% load static %} {% block content %}
 <body>
   <div class="wrapper">
-      
     <div class="box" id="logo">Logo</div>
-    <div class="box" id="one">One</div>
+    <div class="btn-group dropright" id="one">
+      <button
+        type="button"
+        class="btn btn-secondary dropdown-toggle"
+        data-toggle="dropdown"
+        aria-haspopup="true"
+        aria-expanded="false"
+      >
+        Dropright
+      </button>
+      <div class="dropdown-menu">
+        <!-- Dropdown menu links -->
+      </div>
+</div>
     <div class="box" id="two">Two</div>
     <div class="box" id="three">Three</div>
     <div class="box" id="four">Four</div>
@@ -13,7 +25,6 @@
     <div class="box" id="eight">Eight</div>
     <div class="box" id="nine">Nine</div>
     <div class="box" id="ten">Ten</div>
-    
   </div>
 </body>
 
@@ -26,174 +37,174 @@
     text-align: center;
   }
 
-   #one{
+  #one {
     margin: 1%;
     left: 43%;
     height: 120px;
     line-height: 110px;
     top: 0%;
-}
-    
-     #two{
-      margin: 1%;
+  }
+
+  #two {
+    margin: 1%;
     left: 30%;
     height: 120px;
     line-height: 110px;
     top: 78px;
-}
-    
-     #three{
-      margin: 1%;
+  }
+
+  #three {
+    margin: 1%;
     left: 22%;
     height: 120px;
     line-height: 110px;
     top: 200px;
-    }
-    
-     #four{
-      margin: 1%;
+  }
+
+  #four {
+    margin: 1%;
     height: 120px;
     line-height: 110px;
     top: 340px;
     left: 20%;
-    }
-    
-     #five{
-      margin: 1%;
+  }
+
+  #five {
+    margin: 1%;
     height: 120px;
     line-height: 110px;
     left: 28%;
-    top: 460px
-    }
-    
-     #six{
-      margin: 1%;
+    top: 460px;
+  }
+
+  #six {
+    margin: 1%;
     height: 120px;
     line-height: 110px;
     top: 530px;
     left: 43%;
-    }
-    
-     #seven{
-      margin: 1%;
+  }
+
+  #seven {
+    margin: 1%;
     height: 120px;
     line-height: 110px;
     top: 460px;
     left: 57%;
-    }
-    
-     #eight{
-      margin: 1%;
+  }
+
+  #eight {
+    margin: 1%;
     height: 120px;
     line-height: 110px;
     top: 340px;
     left: 66%;
-    }
-    
-     #nine{
-      margin: 1%;
+  }
+
+  #nine {
+    margin: 1%;
     height: 120px;
     line-height: 110px;
     top: 200px;
     left: 65%;
-    }
-    
-     #ten{
-      margin: 1%;
+  }
+
+  #ten {
+    margin: 1%;
     height: 120px;
     line-height: 110px;
     top: 79px;
     left: 56%;
-    }
-  
-    #logo {
-      border: 4px solid darkred;
+  }
+
+  #logo {
+    border: 4px solid darkred;
     background: red;
     height: 120px;
     line-height: 100px;
     left: 44%;
     top: 285px;
-    }
+  }
 
-  .wrapper{
+  .wrapper {
     position: relative;
     width: 80%;
     height: 674px;
     margin: 0 auto;
   }
-    .casator-logo {
-      height: 400px;
-      width: 350px;
-    }
-    
-    .btn.btn-secondary.dropdown-toggle {
-      background: darkred;
-      font-family: serif;
-      border-radius: 50%;
-      height: 170px;
-      width: 250px;
-      word-wrap: break-word;
-      white-space: normal;
-      border: 3px solid black;
-      background: radial-gradient(
-            circle farthest-side at 0% 50%,
-            #b50000 23.5%,
-            rgba(240, 166, 17, 0) 0
-          )
-          21px 30px,
-        radial-gradient(
-            circle farthest-side at 0% 50%,
-            #7d0202 24%,
-            rgba(240, 166, 17, 0) 0
-          )
-          19px 30px,
-        linear-gradient(
-            #b50000 14%,
-            rgba(240, 166, 17, 0) 0,
-            rgba(240, 166, 17, 0) 85%,
-            #b50000 0
-          )
-          0 0,
-        linear-gradient(
-            150deg,
-            #b50000 24%,
-            #7d0202 0,
-            #7d0202 26%,
-            rgba(240, 166, 17, 0) 0,
-            rgba(240, 166, 17, 0) 74%,
-            #7d0202 0,
-            #7d0202 76%,
-            #b50000 0
-          )
-          0 0,
-        linear-gradient(
-            30deg,
-            #b50000 24%,
-            #7d0202 0,
-            #7d0202 26%,
-            rgba(240, 166, 17, 0) 0,
-            rgba(240, 166, 17, 0) 74%,
-            #7d0202 0,
-            #7d0202 76%,
-            #b50000 0
-          )
-          0 0,
-        linear-gradient(90deg, #7d0202 2%, #b50000 0, #b50000 98%, #7d0202 0%) 0
-          0 #b50000;
-      background-size: 40px 60px;
-      opacity: 0.9;
-    }
-    .dropdown-menu.show {
-      background: white;
-      border: 3px solid black;
-    }
-    .dropdown-item {
-      color: black;
-      font-family: serif;
-      font-weight: bold;
-    }
-    ul {
-      list-style-type: square;
-    }
+  .casator-logo {
+    height: 400px;
+    width: 350px;
+  }
+
+  .btn.btn-secondary.dropdown-toggle {
+    background: darkred;
+    font-family: serif;
+    border-radius: 50%;
+    height: 170px;
+    width: 250px;
+    word-wrap: break-word;
+    white-space: normal;
+    border: 3px solid black;
+    background: radial-gradient(
+          circle farthest-side at 0% 50%,
+          #b50000 23.5%,
+          rgba(240, 166, 17, 0) 0
+        )
+        21px 30px,
+      radial-gradient(
+          circle farthest-side at 0% 50%,
+          #7d0202 24%,
+          rgba(240, 166, 17, 0) 0
+        )
+        19px 30px,
+      linear-gradient(
+          #b50000 14%,
+          rgba(240, 166, 17, 0) 0,
+          rgba(240, 166, 17, 0) 85%,
+          #b50000 0
+        )
+        0 0,
+      linear-gradient(
+          150deg,
+          #b50000 24%,
+          #7d0202 0,
+          #7d0202 26%,
+          rgba(240, 166, 17, 0) 0,
+          rgba(240, 166, 17, 0) 74%,
+          #7d0202 0,
+          #7d0202 76%,
+          #b50000 0
+        )
+        0 0,
+      linear-gradient(
+          30deg,
+          #b50000 24%,
+          #7d0202 0,
+          #7d0202 26%,
+          rgba(240, 166, 17, 0) 0,
+          rgba(240, 166, 17, 0) 74%,
+          #7d0202 0,
+          #7d0202 76%,
+          #b50000 0
+        )
+        0 0,
+      linear-gradient(90deg, #7d0202 2%, #b50000 0, #b50000 98%, #7d0202 0%) 0 0
+        #b50000;
+    background-size: 40px 60px;
+    opacity: 0.9;
+  }
+  .dropdown-menu.show {
+    background: white;
+    border: 3px solid black;
+  }
+  .dropdown-item {
+    color: black;
+    font-family: serif;
+    font-weight: bold;
+  }
+  ul {
+    list-style-type: square;
+  }
 </style>
 {% endblock %}
