--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -16,15 +16,132 @@
         <!-- Dropdown menu links -->
       </div>
 </div>
-    <div class="box" id="two">Two</div>
-    <div class="box" id="three">Three</div>
-    <div class="box" id="four">Four</div>
-    <div class="box" id="five">Five</div>
-    <div class="box" id="six">Six</div>
-    <div class="box" id="seven">Seven</div>
-    <div class="box" id="eight">Eight</div>
-    <div class="box" id="nine">Nine</div>
-    <div class="box" id="ten">Ten</div>
+<div class="btn-group dropright" id="two">
+  <button
+    type="button"
+    class="btn btn-secondary dropdown-toggle"
+    data-toggle="dropdown"
+    aria-haspopup="true"
+    aria-expanded="false"
+  >
+    Dropright
+  </button>
+  <div class="dropdown-menu">
+    <!-- Dropdown menu links -->
+  </div>
+</div>
+<div class="btn-group dropright" id="three">
+  <button
+    type="button"
+    class="btn btn-secondary dropdown-toggle"
+    data-toggle="dropdown"
+    aria-haspopup="true"
+    aria-expanded="false"
+  >
+    Dropright
+  </button>
+  <div class="dropdown-menu">
+    <!-- Dropdown menu links -->
+  </div>
+</div>
+<div class="btn-group dropright" id="four">
+  <button
+    type="button"
+    class="btn btn-secondary dropdown-toggle"
+    data-toggle="dropdown"
+    aria-haspopup="true"
+    aria-expanded="false"
+  >
+    Dropright
+  </button>
+  <div class="dropdown-menu">
+    <!-- Dropdown menu links -->
+  </div>
+</div>
+<div class="btn-group dropright" id="five">
+  <button
+    type="button"
+    class="btn btn-secondary dropdown-toggle"
+    data-toggle="dropdown"
+    aria-haspopup="true"
+    aria-expanded="false"
+  >
+    Dropright
+  </button>
+  <div class="dropdown-menu">
+    <!-- Dropdown menu links -->
+  </div>
+</div>
+<div class="btn-group dropright" id="six">
+  <button
+    type="button"
+    class="btn btn-secondary dropdown-toggle"
+    data-toggle="dropdown"
+    aria-haspopup="true"
+    aria-expanded="false"
+  >
+    Dropright
+  </button>
+  <div class="dropdown-menu">
+    <!-- Dropdown menu links -->
+  </div>
+</div>
+<div class="btn-group dropright" id="seven">
+  <button
+    type="button"
+    class="btn btn-secondary dropdown-toggle"
+    data-toggle="dropdown"
+    aria-haspopup="true"
+    aria-expanded="false"
+  >
+    Dropright
+  </button>
+  <div class="dropdown-menu">
+    <!-- Dropdown menu links -->
+  </div>
+</div>
+<div class="btn-group dropright" id="eight">
+  <button
+    type="button"
+    class="btn btn-secondary dropdown-toggle"
+    data-toggle="dropdown"
+    aria-haspopup="true"
+    aria-expanded="false"
+  >
+    Dropright
+  </button>
+  <div class="dropdown-menu">
+    <!-- Dropdown menu links -->
+  </div>
+</div>
+<div class="btn-group dropright" id="nine">
+  <button
+    type="button"
+    class="btn btn-secondary dropdown-toggle"
+    data-toggle="dropdown"
+    aria-haspopup="true"
+    aria-expanded="false"
+  >
+    Dropright
+  </button>
+  <div class="dropdown-menu">
+    <!-- Dropdown menu links -->
+  </div>
+</div>
+<div class="btn-group dropright" id="ten">
+  <button
+    type="button"
+    class="btn btn-secondary dropdown-toggle"
+    data-toggle="dropdown"
+    aria-haspopup="true"
+    aria-expanded="false"
+  >
+    Dropright
+  </button>
+  <div class="dropdown-menu">
+    <!-- Dropdown menu links -->
+  </div>
+</div>
   </div>
 </body>
 
@@ -39,10 +156,11 @@
 
   #one {
     margin: 1%;
-    left: 43%;
+    left: 37%;
     height: 120px;
     line-height: 110px;
     top: 0%;
+    width: 13%;
   }
 
   #two {
