--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -156,83 +156,92 @@
 
   #one {
     margin: 1%;
-    left: 37%;
+    left: 42%;
     height: 120px;
     line-height: 110px;
-    top: 0%;
+    top: -1%;
     width: 13%;
   }
 
   #two {
     margin: 1%;
-    left: 30%;
+    left: 12%;
     height: 120px;
     line-height: 110px;
-    top: 78px;
+    top: 28px;
+    width: 13%;
   }
 
   #three {
     margin: 1%;
-    left: 22%;
+    left: 25%;
     height: 120px;
     line-height: 110px;
-    top: 200px;
+    top: 28px;
+    width: 13%;
   }
 
   #four {
     margin: 1%;
     height: 120px;
     line-height: 110px;
-    top: 340px;
-    left: 20%;
+    top: 146px;
+    left: -30%;
+    width: 13%;
   }
 
   #five {
     margin: 1%;
     height: 120px;
     line-height: 110px;
-    left: 28%;
-    top: 460px;
+    left: 5%;
+    top: 150px;
+    width: 13%;
   }
 
   #six {
     margin: 1%;
     height: 120px;
     line-height: 110px;
-    top: 530px;
-    left: 43%;
+    top: 326px;
+    left: -61%;
+    width: 13%;
   }
 
   #seven {
     margin: 1%;
     height: 120px;
     line-height: 110px;
-    top: 460px;
-    left: 57%;
+    top: 310px;
+    left: 27%;
+    width: 13%;
   }
 
   #eight {
     margin: 1%;
     height: 120px;
     line-height: 110px;
-    top: 340px;
-    left: 66%;
+    top: 344px;
+    left: 27%;
+    width: 13%;
   }
 
   #nine {
     margin: 1%;
     height: 120px;
     line-height: 110px;
-    top: 200px;
-    left: 65%;
+    top: 178px;
+    left: 36%;
+    width: 13%;
   }
 
   #ten {
     margin: 1%;
     height: 120px;
     line-height: 110px;
-    top: 79px;
-    left: 56%;
+    top: 309px;
+    left: 11%;
+    width: 13%;
   }
 
   #logo {
