--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -148,14 +148,16 @@
 </body>
 
 <style>
-  .box {
-    border-radius: 50%;
+  #logo{
+    left: 34%;
+    top: 129px;
     position: absolute;
-    background: green;
-    width: 11%;
-    text-align: center;
   }
 
+  .casator-logo{
+    width: 46%;
+  }
+  
   #one {
     margin: 1%;
     left: 42%;
