--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -12,12 +12,49 @@
         aria-haspopup="true"
         aria-expanded="false"
       >
-        Dropright
-      </button>
-      <div class="dropdown-menu">
-        <!-- Dropdown menu links -->
-      </div>
+      Reklam/PR/Trycksaker
+    </button>
+    <div class="dropdown-menu">
+      <ul>
+        <li>
+          <a
+            target="_blank"
+            rel="noopener noreferrer"
+            class="dropdown-item"
+            href="https://gobrave.se/"
+            >GoBrave - Hemsida och mässmaterial</a
+          >
+        </li>
+        <li>
+          <a
+            target="_blank"
+            rel="noopener noreferrer"
+            class="dropdown-item"
+            href="https://www.lenanders.se/"
+            >Lenanders - Kuvert/Visitkort</a
+          >
+        </li>
+        <li>
+          <a
+            target="_blank"
+            rel="noopener noreferrer"
+            class="dropdown-item"
+            href="https://www.loopia.se/"
+            >Loopia</a
+          >
+        </li>
+        <li>
+          <a
+            target="_blank"
+            rel="noopener noreferrer"
+            class="dropdown-item"
+            href="https://nictrade.se/"
+            >Nictrade</a
+          >
+        </li>
+      </ul>
 </div>
+    </div>
 <div class="btn-group dropright" id="two">
   <button
     type="button"
@@ -26,11 +63,21 @@
     aria-haspopup="true"
     aria-expanded="false"
   >
-    Dropright
-  </button>
-  <div class="dropdown-menu">
-    <!-- Dropdown menu links -->
-  </div>
+  Förbrukningsmaterial/ Kontor
+        </button>
+        <div class="dropdown-menu">
+          <ul>
+            <li>
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                class="dropdown-item"
+                href="https://www.nybloms.se/"
+                >Nybloms - Förbrukningsmaterial</a
+              >
+            </li>
+          </ul>
+        </div>
 </div>
 <div class="btn-group dropright" id="three">
   <button
@@ -40,11 +87,21 @@
     aria-haspopup="true"
     aria-expanded="false"
   >
-    Dropright
-  </button>
-  <div class="dropdown-menu">
-    <!-- Dropdown menu links -->
-  </div>
+  Ekonomi och Bokföring
+</button>
+<div class="dropdown-menu">
+  <ul>
+    <li>
+      <a
+        target="_blank"
+        rel="noopener noreferrer"
+        class="dropdown-item"
+        href="https://bdokontoret.bdo.se/signin"
+        >BDO Kontoret</a
+      >
+    </li>
+  </ul>
+</div>
 </div>
 <div class="btn-group dropright" id="four">
   <button
@@ -54,11 +111,21 @@
     aria-haspopup="true"
     aria-expanded="false"
   >
-    Dropright
-  </button>
-  <div class="dropdown-menu">
-    <!-- Dropdown menu links -->
-  </div>
+  Dokumentation och Avvikelser
+        </button>
+        <div class="dropdown-menu">
+          <ul>
+            <li>
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                class="dropdown-item"
+                href="https://www.infosoc.nu/Js/default.aspx"
+                >Infosoc</a
+              >
+            </li>
+          </ul>
+        </div>
 </div>
 <div class="btn-group dropright" id="five">
   <button
@@ -68,11 +135,57 @@
     aria-haspopup="true"
     aria-expanded="false"
   >
-    Dropright
-  </button>
-  <div class="dropdown-menu">
-    <!-- Dropdown menu links -->
-  </div>
+  Tidrapportering och Schema
+</button>
+<div class="dropdown-menu">
+  <ul>
+    <li>
+      <a
+        target="_blank"
+        rel="noopener noreferrer"
+        class="dropdown-item"
+        href="https://mittschema.nu/"
+        >Pofa - Kalmarverksamheterna</a
+      >
+    </li>
+    <li>
+      <a
+        target="_blank"
+        rel="noopener noreferrer"
+        class="dropdown-item"
+        href="https://www.vsoft.se/"
+        >Vsoft - Schemalätt</a
+      >
+    </li>
+    <li>
+      <a
+        target="_blank"
+        rel="noopener noreferrer"
+        class="dropdown-item"
+        href="https://id.hogia.se/#/?returnUrl=https%3a%2f%2fid.hogia.se%2fconnect%2fauthorize%3fclient_id%3d947c72b4-d1e4-4454-95ab-a49d00f3047a%26redirect_uri%3dhttps%3a%252F%252Fmy.hogia.se%252Fsignin-oidc%26response_type%3did_token+token%26scope%3dopenid+email+profile%26state%3d8e275cd2399f40f39de8430222e79c17%26nonce%3d1ee2cc6c43ff48c6b2f06ee99cea145c%26response_mode%3dfragment&theme=8c5c8e47-86dd-4e82-96b4-a49d00f0def9"
+        >Tidrapportering - Botorp</a
+      >
+    </li>
+    <li>
+      <a
+        target="_blank"
+        rel="noopener noreferrer"
+        class="dropdown-item"
+        href="https://www.fora.se/"
+        >Fora</a
+      >
+    </li>
+    <li>
+      <a
+        target="_blank"
+        rel="noopener noreferrer"
+        class="dropdown-item"
+        href="https://collectum.se/"
+        >Collectum</a
+      >
+    </li>
+  </ul>
+</div>
 </div>
 <div class="btn-group dropright" id="six">
   <button
@@ -82,11 +195,48 @@
     aria-haspopup="true"
     aria-expanded="false"
   >
-    Dropright
-  </button>
-  <div class="dropdown-menu">
-    <!-- Dropdown menu links -->
-  </div>
+  Upphandlingar och Ramavtal
+        </button>
+        <div class="dropdown-menu">
+          <ul>
+            <li>
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                class="dropdown-item"
+                href="https://tendsign.com/"
+                >TendSign</a
+              >
+            </li>
+            <li>
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                class="dropdown-item"
+                href="https://www.kommersannons.se/eLite/"
+                >Kommers Annons</a
+              >
+            </li>
+            <li>
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                class="dropdown-item"
+                href="https://www.sklkommentus.se/"
+                >SKL Kommentus</a
+              >
+            </li>
+            <li>
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                class="dropdown-item"
+                href="https://www.creditsafe.com/se/sv.html"
+                >Creditsafe</a
+              >
+            </li>
+          </ul>
+        </div>
 </div>
 <div class="btn-group dropright" id="seven">
   <button
@@ -96,11 +246,39 @@
     aria-haspopup="true"
     aria-expanded="false"
   >
-    Dropright
-  </button>
-  <div class="dropdown-menu">
-    <!-- Dropdown menu links -->
-  </div>
+  Telefon, Internet och Webmail
+</button>
+<div class="dropdown-menu">
+  <ul>
+    <li>
+      <a
+        target="_blank"
+        rel="noopener noreferrer"
+        class="dropdown-item"
+        href="https://www.telenor.se/foretag/sjalvbetjaning/"
+        >Telenor - Mobiler</a
+      >
+    </li>
+    <li>
+      <a
+        target="_blank"
+        rel="noopener noreferrer"
+        class="dropdown-item"
+        href="https://www.beebyte.se/"
+        >Beebyte - Webmail</a
+      >
+    </li>
+    <li>
+      <a
+        target="_blank"
+        rel="noopener noreferrer"
+        class="dropdown-item"
+        href="https://www.telia.se/privat"
+        >Telia - Internet/Fasta telefoner</a
+      >
+    </li>
+  </ul>
+</div>
 </div>
 <div class="btn-group dropright" id="eight">
   <button
@@ -110,11 +288,21 @@
     aria-haspopup="true"
     aria-expanded="false"
   >
-    Dropright
-  </button>
-  <div class="dropdown-menu">
-    <!-- Dropdown menu links -->
-  </div>
+  Löner och Personal
+</button>
+<div class="dropdown-menu">
+  <ul>
+    <li>
+      <a
+        target="_blank"
+        rel="noopener noreferrer"
+        class="dropdown-item"
+        href="https://sts.hogiacloud.se/adfs/ls"
+        >Hogia Cloud</a
+      >
+    </li>
+  </ul>
+</div>
 </div>
 <div class="btn-group dropright" id="nine">
   <button
@@ -124,11 +312,21 @@
     aria-haspopup="true"
     aria-expanded="false"
   >
-    Dropright
-  </button>
-  <div class="dropdown-menu">
-    <!-- Dropdown menu links -->
-  </div>
+  Hemsida Casator
+</button>
+<div class="dropdown-menu">
+  <ul>
+    <li>
+      <a
+        target="_blank"
+        rel="noopener noreferrer"
+        class="dropdown-item"
+        href="http://www.casatorcare.se"
+        >Casator Care</a
+      >
+    </li>
+  </ul>
+</div>
 </div>
 <div class="btn-group dropright" id="ten">
   <button
@@ -138,11 +336,21 @@
     aria-haspopup="true"
     aria-expanded="false"
   >
-    Dropright
-  </button>
-  <div class="dropdown-menu">
-    <!-- Dropdown menu links -->
-  </div>
+  Digitala Möten
+</button>
+<div class="dropdown-menu">
+  <ul>
+    <li>
+      <a
+        target="_blank"
+        rel="noopener noreferrer"
+        class="dropdown-item"
+        href="https://www.microsoft.com/sv-se/microsoft-teams/download-app"
+        >Microsoft Teams</a
+      >
+    </li>
+  </ul>
+</div>
 </div>
   </div>
 </body>
