--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -356,6 +356,7 @@
 </body>
 
 <style>
+  @media(min-width: 1500px){
   #logo{
     left: 34%;
     top: 129px;
@@ -531,6 +532,7 @@
   }
   ul {
     list-style-type: square;
+  }
   }
 </style>
 {% endblock %}
