--- a/portalen/templates/portalen/loginheader.html
+++ b/portalen/templates/portalen/loginheader.html
@@ -21,5 +21,10 @@
 <nav class="navbar navbar-expand-lg">
   <div class="center">
     <h1>Casatorportalen</h1>
+    <p>Välkommen!
+      Denna portal är till för anställda i Casator Care. 
+      Letar du efter Casator Cares hemsida så hittar du den på casatorcare.se. Där finns information om våra verksamheter, samt information om hur du kommer i kontakt med oss.
+      Är du anställd  i Casator så loggar du in här nedanför. Användarnamn och lösenord får du av din verksamhetschef.
+      </p>
   </div>
 </nav>
