--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -1,75 +1,99 @@
-{% extends  'portalen/loginbase.html' %}
+{% extends 'portalen/loginbase.html' %} {% block content %}
+<hr />
 
-
-{%  block content %}
-<hr>
-
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" id="bootstrap-css" rel="stylesheet">
+<link
+  href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+  id="bootstrap-css"
+  rel="stylesheet"
+/>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 
 <style>
-    #login{
+  #login {
     background: darkred;
     border: 3px solid black;
     font-family: serif;
     display: flex;
     align-content: center;
     justify-content: center;
-    }
-    .text-info {
-    color: white!important;
+  }
+  .text-info {
+    color: white !important;
     font-family: serif;
-}
-.btn-info {
+  }
+  .btn-info {
     color: black;
     background-color: white;
     border: 2px solid black;
-}
-#password.form-control{
-border: 2px solid black;
-}
-#username.form-control{
-border: 2px solid black;
-}
-#messages{
-color: white;
-}
+  }
+  #password.form-control {
+    border: 2px solid black;
+  }
+  #username.form-control {
+    border: 2px solid black;
+  }
+  #messages {
+    color: white;
+  }
 </style>
 
-
 <body>
-<div id="login">
+  <div id="login">
     <div class="container">
-        <div class="row justify-content-center align-items-center" id="login-row">
-            <div class="col-md-6" id="login-column">
-                <div class="col-md-12" id="login-box">
-                    <form action="" class="form" id="login-form" method="post">
-                        {% csrf_token %}
-                        <h3 class="text-center text-info">Logga in</h3>
-                        <div class="form-group">
-                            <label class="text-info" for="username">Användarnamn:</label><br>
-                            <input class="form-control" id="username" name="username" type="text">
-                        </div>
-                        <div class="form-group">
-                            <label class="text-info" for="password">Lösenord:</label><br>
-                            <input class="form-control" id="password" name="password" type="password">
-                            <br>
-                            <div class="container-sm">
-                                {% for message in messages %}
-                                <p id="messages">{{message}}</p>
-                                {% endfor %}
-                            </div>
-                            <input class="btn btn-info btn-md" name="submit" type="submit" value="Logga in">
-                        </div>
-                    </form>
+      <div class="row justify-content-center align-items-center" id="login-row">
+        <div class="col-md-6" id="login-column">
+          <div class="col-md-12" id="login-box">
+            <form action="" class="form" id="login-form" method="post">
+              {% csrf_token %}
+              <p>Välkommen!</p>
+              <p>Denna portal är till för anställda i Casator Care.</p>
+              <p>
+                Letar du efter Casator Cares hemsida så hittar du den på
+                casatorcare.se. Där finns information om våra verksamheter, samt
+                information om hur du kommer i kontakt med oss.
+              </p>
+              <p>Är du anställd i Casator så loggar du in här nedanför.</p>
+              <p>Användarnamn och lösenord får du av din verksamhetschef.</p>
+              <h3 class="text-center text-info">Logga in</h3>
+              <div class="form-group">
+                <label class="text-info" for="username">Användarnamn:</label
+                ><br />
+                <input
+                  class="form-control"
+                  id="username"
+                  name="username"
+                  type="text"
+                />
+              </div>
+              <div class="form-group">
+                <label class="text-info" for="password">Lösenord:</label><br />
+                <input
+                  class="form-control"
+                  id="password"
+                  name="password"
+                  type="password"
+                />
+                <br />
+                <div class="container-sm">
+                  {% for message in messages %}
+                  <p id="messages">{{message}}</p>
+                  {% endfor %}
                 </div>
-            </div>
+                <input
+                  class="btn btn-info btn-md"
+                  name="submit"
+                  type="submit"
+                  value="Logga in"
+                />
+              </div>
+            </form>
+          </div>
         </div>
+      </div>
     </div>
-</div>
+  </div>
 </body>
-
 
 {% endblock %}
