--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -47,15 +47,16 @@
           <div class="col-md-12" id="login-box">
             <form action="" class="form" id="login-form" method="post">
               {% csrf_token %}
-              <p>Välkommen!</p>
-              <p>Denna portal är till för anställda i Casator Care.</p>
-              <p>
+                Välkommen!
+              
+                Denna portal är till för anställda i Casator Care.
+              
                 Letar du efter Casator Cares hemsida så hittar du den på
                 casatorcare.se. Där finns information om våra verksamheter, samt
                 information om hur du kommer i kontakt med oss.
-              </p>
-              <p>Är du anställd i Casator så loggar du in här nedanför.</p>
-              <p>Användarnamn och lösenord får du av din verksamhetschef.</p>
+              
+                Är du anställd i Casator så loggar du in här nedanför.
+                Användarnamn och lösenord får du av din verksamhetschef.
               <h3 class="text-center text-info">Logga in</h3>
               <div class="form-group">
                 <label class="text-info" for="username">Användarnamn:</label
