--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -47,8 +47,8 @@
           <div class="col-md-12" id="login-box">
             <form action="" class="form" id="login-form" method="post">
               {% csrf_token %}
+              <pre>
                 Välkommen!
-              
                 Denna portal är till för anställda i Casator Care.
               
                 Letar du efter Casator Cares hemsida så hittar du den på
@@ -57,6 +57,7 @@
               
                 Är du anställd i Casator så loggar du in här nedanför.
                 Användarnamn och lösenord får du av din verksamhetschef.
+            </pre>
               <h3 class="text-center text-info">Logga in</h3>
               <div class="form-group">
                 <label class="text-info" for="username">Användarnamn:</label
