--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -48,16 +48,17 @@
             <form action="" class="form" id="login-form" method="post">
               {% csrf_token %}
               <pre>
-            Välkommen!
-            Denna portal är till för anställda i Casator Care.
+    Välkommen!
+    Denna portal är till för anställda i Casator Care.
               
-            Letar du efter Casator Cares hemsida så hittar du den på
-            casatorcare.se. Där finns information om våra verksamheter, samt
-            information om hur du kommer i kontakt med oss.
+    Letar du efter Casator Cares hemsida så hittar du den på
+    casatorcare.se. Där finns information om våra verksamheter, samt
+    information om hur du kommer i kontakt med oss.
               
-            Är du anställd i Casator så loggar du in här nedanför.
-            Användarnamn och lösenord får du av din verksamhetschef.
-            </pre>
+    Är du anställd i Casator så loggar du in här nedanför.
+    Användarnamn och lösenord får du av din verksamhetschef.
+            </pre
+              >
               <h3 class="text-center text-info">Logga in</h3>
               <div class="form-group">
                 <label class="text-info" for="username">Användarnamn:</label
