--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -19,6 +19,15 @@
     align-content: center;
     justify-content: center;
   }
+  .container{
+    height: 599px;
+  }
+  pre{
+    display: block;
+    color: #ffffff;
+    font: unset;
+    height: 264px;
+  }
   .text-info {
     color: white !important;
     font-family: serif;
@@ -48,7 +57,8 @@
             <form action="" class="form" id="login-form" method="post">
               {% csrf_token %}
               <pre>
-                  
+
+
 Välkommen!
 Denna portal är till för anställda i Casator Care.
               
