--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -367,83 +367,73 @@
   }
 
   #one {
-    margin: 1%;
     left: 42%;
     height: 120px;
     top: -1%;
-    width: 13%;
+    width: 18%;
   }
 
   #two {
-    margin: 1%;
     left: 12%;
     height: 120px;
     top: 28px;
-    width: 13%;
+    width: 18%;
   }
 
   #three {
-    margin: 1%;
     left: 26%;
     height: 120px;
     top: 28px;
-    width: 15%;
+    width: 18%;
   }
 
   #four {
-    margin: 1%;
     height: 120px;
     top: 146px;
     left: -30%;
-    width: 13%;
+    width: 18%;
   }
 
   #five {
-    margin: 1%;
     height: 120px;
     left: 4%;
     top: 150px;
-    width: 14%;
+    width: 18%;
   }
 
   #six {
-    margin: 1%;
     height: 120px;
     top: 326px;
     left: -64%;
-    width: 14%;
+    width: 18%;
   }
 
   #seven {
-    margin: 1%;
     height: 120px;
     top: 310px;
     left: 27%;
-    width: 13%;
+    width: 18%;
   }
 
   #eight {
-    margin: 1%;
     height: 120px;
     top: 344px;
     left: 27%;
-    width: 13%;
+    width: 18%;
   }
 
   #nine {
-    margin: 1%;
     height: 120px;
     top: 178px;
     left: 36%;
-    width: 13%;
+    width: 18%;
   }
 
   #ten {
-    margin: 1%;
-    height: 120px;
+        height: 120px;
     top: 309px;
     left: 11%;
-    width: 13%;
+    width: 18%;
   }
 
   .wrapper {
@@ -454,7 +444,7 @@
   }
 
   .btn.btn-secondary.dropdown-toggle {
-    background: darkred;
+    background: #790d08;
     font-family: serif;
     border-radius: 50%;
     height: 170px;
@@ -462,52 +452,6 @@
     word-wrap: break-word;
     white-space: normal;
     border: 3px solid black;
-    background: radial-gradient(
-          circle farthest-side at 0% 50%,
-          #b50000 23.5%,
-          rgba(240, 166, 17, 0) 0
-        )
-        21px 30px,
-      radial-gradient(
-          circle farthest-side at 0% 50%,
-          #7d0202 24%,
-          rgba(240, 166, 17, 0) 0
-        )
-        19px 30px,
-      linear-gradient(
-          #b50000 14%,
-          rgba(240, 166, 17, 0) 0,
-          rgba(240, 166, 17, 0) 85%,
-          #b50000 0
-        )
-        0 0,
-      linear-gradient(
-          150deg,
-          #b50000 24%,
-          #7d0202 0,
-          #7d0202 26%,
-          rgba(240, 166, 17, 0) 0,
-          rgba(240, 166, 17, 0) 74%,
-          #7d0202 0,
-          #7d0202 76%,
-          #b50000 0
-        )
-        0 0,
-      linear-gradient(
-          30deg,
-          #b50000 24%,
-          #7d0202 0,
-          #7d0202 26%,
-          rgba(240, 166, 17, 0) 0,
-          rgba(240, 166, 17, 0) 74%,
-          #7d0202 0,
-          #7d0202 76%,
-          #b50000 0
-        )
-        0 0,
-      linear-gradient(90deg, #7d0202 2%, #b50000 0, #b50000 98%, #7d0202 0%) 0 0
-        #b50000;
-    background-size: 40px 60px;
     opacity: 0.9;
   }
   .dropdown-menu.show {
