--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -62,7 +62,7 @@ Välkommen!
 Denna portal är till för anställda i Casator Care.
               
 Letar du efter Casator Cares hemsida så hittar du den på
-casatorcare.se. Där finns information om våra verksamheter, samt
+<a href="https://casatorcare.se/">casatorcare.se</a>. Där finns information om våra verksamheter, samt
 information om hur du kommer i kontakt med oss.
               
 Är du anställd i Casator så loggar du in här nedanför.
