--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -304,7 +304,7 @@
   </ul>
 </div>
 </div>
-<div class="btn-group dropright" id="ten">
+<div class="btn-group dropright" id="nine">
   <button
     type="button"
     class="btn btn-secondary dropdown-toggle"
@@ -400,15 +400,8 @@
 
   #nine {
     height: 120px;
-    top: 178px;
-    left: 36%;
-    width: 18%;
-  }
-
-  #ten {
-    height: 120px;
     top: 309px;
-    left: -12%;
+    left: 5%;
     width: 18%;
   }
 
