Fix error message

--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -89,12 +89,10 @@ Användarnamn och lösenord får du av din verksamhetschef.
                   type="password"
                 />
                 <br />
-
-                {% for message in messages %}
-                <div class="alest alert-success">
-                  {{ message }}
-                </div>
-                {% endfor %}
+                
+                  {% for message in messages %}
+                  <p id="messages">{{ message}}</p>
+                  {% endfor %}
                 
                 <input
                   class="btn btn-info btn-md"
