--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -89,10 +89,11 @@ Användarnamn och lösenord får du av din verksamhetschef.
                   type="password"
                 />
                 <br />
-                
+                {% if messages %}
                   {% for message in messages %}
                       <p id="messages">{{message}}</p>
                   {% endfor %}
+                {% endif %}
                 
                 <input
                   class="btn btn-info btn-md"
