--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -88,9 +88,11 @@ Användarnamn och lösenord får du av din verksamhetschef.
                   type="password"
                 />
                 <br />
+                {% if messages %}
                 {% for message in messages %}
                 <div class="alert alert-dark" role="alert">{{message}}</div>
                 {% endfor %}
+                {% endif %}
 
                 <input
                   class="btn btn-info btn-md"
