--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -98,7 +98,7 @@ Användarnamn och lösenord får du av din verksamhetschef.
               </div>
             </form>
             {% for message in messages %}
-            <p>{{form.message}}</p>
+            <p>{{form.errors}}</p>
             {% endfor %}
           </div>
         </div>
