--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -97,7 +97,7 @@ Användarnamn och lösenord får du av din verksamhetschef.
                 />
               </div>
             </form>
-            <p>{{messages}}</p>
+            <p>{{messages.info}}</p>
           </div>
         </div>
       </div>
