--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -88,9 +88,7 @@ Användarnamn och lösenord får du av din verksamhetschef.
                   type="password"
                 />
                 <br />
-                {% for message in messages %}
-                    <p id="messages">{{message}}</p>
-                {% endfor %}
+                {{form.info}}
                 <input
                   class="btn btn-info btn-md"
                   name="submit"
