--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -45,6 +45,12 @@
   #messages {
     color: white;
   }
+  .errorlist{
+    color: white;
+    position: absolute;
+    top: 509px;
+    left: 24%;
+  }
 </style>
 
 <body>
